Made a wifi module

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "main.c"
+idf_component_register(SRCS "main.c" "platform_wifi_client.c"
                     EMBED_FILES root.html success.html)
