Definitely need to commit and push more. Added in the relay functionality along with the different types of servers needed

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,3 @@
-idf_component_register(SRCS "main.c" "platform_wifi_client.c"
-                    EMBED_FILES root.html success.html)
+
+idf_component_register(SRCS "main.c" "platform_wifi_client.c" "platform_plug_server.c" "platform_relay.c"
+                    EMBED_FILES ../webpages/root.html ../webpages/success.html ../webpages/plug_control.html)
