Created a wifi provisioning system with an AP. Essentially the MVP short of the timers are complete. A lot of polishing left to do

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,9 @@
 
-idf_component_register(SRCS "main.c" "platform_wifi_client.c" "platform_plug_server.c" "platform_relay.c"
-                    EMBED_FILES ../webpages/root.html ../webpages/success.html ../webpages/plug_control.html)
+idf_component_register(SRCS "main.c" 
+                            "wifi_module.c" 
+                            "plug_server.c" 
+                            "relay.c" 
+                            "util.c" 
+                            "ap_server.c" 
+                            "controller.c" 
+                    EMBED_FILES ../webpages/root.html ../webpages/plug_control.html)
