Added power monitor functionality. Adjusted a lot of shit. I need to make smaller commits..

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,9 +1,15 @@
 
-idf_component_register(SRCS "main.c" 
-                            "wifi_module.c" 
-                            "plug_server.c" 
-                            "relay.c" 
-                            "util.c" 
-                            "ap_server.c" 
-                            "controller.c" 
-                    EMBED_FILES ../webpages/root.html ../webpages/plug_control.html)
+set(srcs
+"main.c" 
+"wifi_module.c" 
+"plug_server.c" 
+"relay.c" 
+"util.c" 
+"ap_server.c" 
+"controller.c" 
+"../modules/ACS_module.c"
+"../modules/MCP7940.c"
+)
+idf_component_register(SRCS "${srcs}"
+                    INCLUDE_DIRS "."
+                    EMBED_FILES ../webpages/root.html ../webpages/dashboard.html)
